Laborator3: exercitiul 3: Add solutions for exercise 3
    I accessed the 03-entry-fix directory and solved the
problem by modifying the .c or .asm files.

Signed-off-by: Violeta2002 <comsa.iulianavioleta@gamil.com>

--- a/laborator/content/etapele-compilarii/03-entry-fix/c-extra-nolibc/Makefile
+++ b/laborator/content/etapele-compilarii/03-entry-fix/c-extra-nolibc/Makefile
@@ -13,6 +13,7 @@ hello: hello.o start.o puts.o
 	$(CC) $(LDFLAGS) -o $@ $^
 
 hello.o: hello.c
+	gcc $(CFLAGS) -c hello.c -o hello.o
 
 start.o: start.asm
 	$(AS) $(ASFLAGS) -o $@ $<
